{
    "name": "DefaultControls",
    "maps": [
        {
            "name": "DefaultMap",
            "id": "bd47facd-02f7-487e-8ba7-46bd16d665a2",
            "actions": [
                {
                    "name": "OnClick",
                    "type": "Button",
                    "id": "24cbd0f4-cfbb-4d25-91f7-e5b426e1f480",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "f20b4e24-ec48-444c-a89c-94b2c9709d58",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "CancelOperation",
                    "type": "Button",
                    "id": "816497fc-b692-4616-a0fe-f00b687837a2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e512fc8a-0a51-4040-a046-9d9d50bec037",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OnClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d74aa10-edc3-44b5-97d0-6e3a344994e6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f6bc0b0a-1dad-4fab-ac4f-010c9d06739f",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CancelOperation",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}